--- a/debian/rules
+++ b/debian/rules
@@ -72,7 +72,7 @@ binary-indep: build install
 
 	dh_installdocs
 	dh_installman
-	dh_install --sourcedir=debian/tmp
+	dh_install --sourcedir=debian/tmp --list-missing
 	dh_installchangelogs
 	dh_link
 	dh_strip
