--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Standards-Version: 3.6.1.0
 
 Package: x11proto-randr-dev
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}, x11-common
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Conflicts: libxrandr-dev (<< 6.8.2-21)
 Replaces: libxrandr-dev (<< 6.8.2-21)
 Pre-Depends: x11-common (>= 1:1.0)
