--- a/debian/rules
+++ b/debian/rules
@@ -70,7 +70,7 @@ binary-indep: build install
 	dh_testdir
 	dh_testroot
 
-	dh_installdocs
+	dh_installdocs randrproto.txt
 	dh_installman
 	dh_install --sourcedir=debian/tmp --list-missing
 	dh_installchangelogs ChangeLog
