Various fixed in debian/control and copyright

--- a/debian/control
+++ b/debian/control
@@ -15,10 +15,13 @@ Conflicts: libxrandr-dev (<< 6.8.2-21)
 Replaces: libxrandr-dev (<< 6.8.2-21)
 Pre-Depends: x11-common (>= 1:7.0.0)
 Description: X11 RandR extension wire protocol
- This package provides the wire protocol for the RandR extension, used to
- change display properties such as resolution, rotation, reflection, et al,
- on the fly.
+ This package provides development headers describing the wire protocol
+ for the RandR extension, used to change display properties such as
+ resolution, rotation, reflection, et al, on the fly.
  .
  More information about X.Org can be found at:
+ <URL:http://www.X.org>
  <URL:http://xorg.freedesktop.org>
  <URL:http://lists.freedesktop.org/mailman/listinfo/xorg>
+ .
+ This package is built from the X.org randrproto proto module.
