--- a/debian/rules
+++ b/debian/rules
@@ -49,6 +49,7 @@ clean:
 	rm -rf autom4te.cache */autom4te.cache
 	rm -rf obj-*
 	rm -f aclocal.m4 configure install-sh missing
+	rm -f config.guess config.sub
 	rm -f Makefile.in
 
 	dh_clean
