--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,7 @@ Uploaders: David Nusinow <dnusinow@debian.org>, Andres Salomon <dilinger@debian.
 Build-Depends:
  debhelper (>= 5.0.0),
  automake,
+ pkg-config,
  xutils-dev (>= 1:7.5~1)
 Standards-Version: 3.8.3
 Vcs-Git: git://git.debian.org/git/pkg-xorg/proto/x11proto-randr
